<resources>
    <string name="app_name">Fiscal Code</string>
    <string name="birthdate_dd_mm_yyyy">Birthdate (dd/mm/yyyy)</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="birth_country">Birth Country</string>
    <string name="wait_please">Wait Please</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="error_date">Enter a date earlier than the current date</string>
    <string name="title">TAX CODE CALCULATION</string>
    <string name="logo" translatable="false">Logo</string>
</resources>