<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etBirthdate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/med_space"
        android:layout_marginTop="@dimen/med_space"
        android:layout_marginEnd="@dimen/med_space"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/birthdate_dd_mm_yyyy"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/med_space"
        android:layout_marginTop="@dimen/med_space"
        android:layout_marginEnd="@dimen/med_space"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/med_space"
        android:layout_marginTop="@dimen/med_space"
        android:layout_marginEnd="@dimen/med_space"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvFiscalCode"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_output"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:textColor="#FF000000"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCountryName" />

    <AutoCompleteTextView
        android:id="@+id/etCountryName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/med_space"
        android:layout_marginTop="@dimen/med_space"
        android:layout_marginEnd="@dimen/med_space"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/birth_country"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cp_gender" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cp_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/med_space"

        android:layout_marginTop="@dimen/med_space"
        app:checkedChip="@id/cp_male"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBirthdate"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/female" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>